--- a/account.properties
+++ b/account.properties
@@ -1,9 +1,9 @@
-account.msg=Welcome to the Bank account application.
+account.msg=Welcome to the Bank account default application.
 account.build.version=3
 account.mailDetails.hostName=account@santanu.com
 account.mailDetails.port=9010
 account.mailDetails.from=account@santanu.com
-account.mailDetails.subject=Your account details from Bank production env.
+account.mailDetails.subject=Your account details from Bank dev env.
 
 account.activeBranches[0]=Dhaka
 account.activeBranches[1]=Chattogram
