Modified properties file

--- a/account-prod.properties
+++ b/account-prod.properties
@@ -1,5 +1,5 @@
 account.msg=Welcome to the Bank account application.
-account.build.version=1
+account.build-version=1
 account.mailDetails.hostName=account_prod@santanu.com
 account.mailDetails.port=9030
 account.mailDetails.from=account_prod@santanu.com
