--- a/account.properties
+++ b/account.properties
@@ -1,5 +1,5 @@
 account.msg=Welcome to the Bank account default application.
-account.build.version=3
+account.build-version=3
 account.mailDetails.hostName=account@santanu.com
 account.mailDetails.port=9010
 account.mailDetails.from=account@santanu.com
