--- a/card-dev.properties
+++ b/card-dev.properties
@@ -1,5 +1,5 @@
 card.msg=Welcome to the Bank card application.
-card.build.version=2
+card.build-version=2
 card.mailDetails.hostName=card_dev@santanu.com
 card.mailDetails.port=8020
 card.mailDetails.from=card_dev@santanu.com
