--- a/card-prod.properties
+++ b/card-prod.properties
@@ -1,5 +1,5 @@
 card.msg=Welcome to the Bank card application.
-card.build.version=1
+card.build-version=1
 card.mailDetails.hostName=card_prod@santanu.com
 card.mailDetails.port=8030
 card.mailDetails.from=card_prod@santanu.com
