--- a/card.properties
+++ b/card.properties
@@ -1,5 +1,5 @@
 card.msg=Welcome to the Bank card default application.
-card.build.version=3
+card.build-version=3
 card.mailDetails.hostName=card@santanu.com
 card.mailDetails.port=9010
 card.mailDetails.from=card@santanu.com
