--- a/loan-prod.properties
+++ b/loan-prod.properties
@@ -1,5 +1,5 @@
 loan.msg=Welcome to the Bank loan application.
-loan.build.version=1
+loan.build-version=1
 loan.mailDetails.hostName=loan_prod@santanu.com
 loan.mailDetails.port=7030
 loan.mailDetails.from=loan_prod@santanu.com
