--- a/loan.properties
+++ b/loan.properties
@@ -1,5 +1,5 @@
 loan.msg=Welcome to the Bank loan default application.
-loan.build.version=3
+loan.build-version=3
 loan.mailDetails.hostName=loan@santanu.com
 loan.mailDetails.port=7010
 loan.mailDetails.from=loan@santanu.com
