--- a/account-dev.properties
+++ b/account-dev.properties
@@ -1,5 +1,5 @@
 account.msg=Welcome to the Bank account application.
-account.build.version=2
+account.build-version=2
 account.mailDetails.hostName=account_dev@santanu.com
 account.mailDetails.port=9020
 account.mailDetails.from=account_dev@santanu.com
