--- a/loan-dev.properties
+++ b/loan-dev.properties
@@ -1,5 +1,5 @@
 loan.msg=Welcome to the Bank loan application.
-loan.build.version=2
+loan.build-version=2
 loan.mailDetails.hostName=loan_dev@santanu.com
 loan.mailDetails.port=7020
 loan.mailDetails.from=loan_dev@santanu.com
